Create black, empty cells at the start

--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
             #board {
                 background-color:#0000FF;
                 margin:15px auto;
+                padding:0px;
                 width:700px;
                 height:600px;
                 overflow:auto;
             }
             .cell {
-                width:90px;
-                height:90px;
+                float:left;
+                width:80px;
+                height:80px;
                 margin:10px;
                 padding:0px;
                 border-radius:50%;
-                background-color:#FF0000;
             }
         </style>
         <script src="script.js"></script>
     </head>
     <body>
     
-        <div id="board">
-            <div class="cell"></div>            
-        </div>
+        <div id="board"></div>
     </body>
 </html>
