Beter alert at end of game

--- a/index.html
+++ b/index.html
@@ -23,11 +23,20 @@
                 padding:0px;
                 border-radius:50%;
             }
+            #message {
+                position:absolute;
+                left:0px;
+                top:0px;
+                width:150px;
+                font-family:sans-serif;
+                padding:20px;
+                font-size:25px;
+            }
         </style>
         <script src="script.js"></script>
     </head>
     <body>
-    
+        <div id="message">Turn: user</div> 
         <div id="board"></div>
     </body>
 </html>
