--- a/index.html
+++ b/index.html
@@ -23,20 +23,29 @@
                 padding:0px;
                 border-radius:50%;
             }
-            #message {
+            #pos {
                 position:absolute;
                 left:0px;
                 top:0px;
-                width:150px;
-                font-family:sans-serif;
                 padding:20px;
+            }
+            #message {
+                margin-top:20px;
+                width:190px;
+                font-family:sans-serif;
                 font-size:25px;
+            }
+            button {
+                font-size:20px;
             }
         </style>
         <script src="script.js"></script>
     </head>
     <body>
-        <div id="message">Turn: user</div> 
+        <div id="pos">
+            <button onclick="location.reload()">New game</button>
+            <div id="message">Turn: user</div> 
+        </div>
         <div id="board"></div>
     </body>
 </html>
