--- a/index.html
+++ b/index.html
@@ -27,25 +27,45 @@
                 position:absolute;
                 left:0px;
                 top:0px;
+                width:200px;
                 padding:20px;
+                margin:0px auto;
+                text-align:center;
             }
             #message {
-                margin-top:20px;
-                width:190px;
+                display:inline;
                 font-family:sans-serif;
                 font-size:25px;
+                margin-top:10px;
             }
             button {
                 font-size:20px;
+            }
+
+            @media screen and (max-width: 1100px) {
+                #pos {
+                    position:static;
+                    padding:0px;
+                    width:100%;
+                }
+                button {
+                    font-size:35px;
+                }
+                #message {
+                    font-size:40px;
+                }
             }
         </style>
         <script src="script.js"></script>
     </head>
     <body>
+        <div id="board"></div>
+
         <div id="pos">
             <button onclick="location.reload()">New game</button>
+            <br /><br />
             <div id="message">Turn: user</div> 
         </div>
-        <div id="board"></div>
+
     </body>
 </html>
