Optimalize consequent check and spawn border on win

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
                 width:700px;
                 height:600px;
                 overflow:auto;
+
+                border-width:5px;
+                border-color:white;
+                border-style:solid;
             }
             .cell {
                 float:left;
