Use English insted of Dutch

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 width:700px;
                 height:600px;
                 overflow:auto;
+                border-radius:15px;
 
                 border-width:5px;
                 border-color:white;
@@ -72,16 +73,9 @@
         <div id="board"></div>
 
         <div id="pos">
-            <button onclick="location.reload()">Nieuw spel</button>
+            <button onclick="location.reload()">Clear game</button>
             <br /><br />
-            <div id="message">Beurt: gebruiker</div> 
-
-            <br /><br />
-
-             <label>
-                <input type="checkbox" id="lowerDepth" checked />
-                Snellere, minder goede zetten
-            </label>
+            <div id="message">Turn: user</div> 
 
         </div>
     </body>
